--- a/style.sty
+++ b/style.sty
@@ -8,7 +8,7 @@
 \usepackage{fontspec}
 % \usepackage[utf8]{inputenc}  % useless for LuaLaTex
 \usepackage[bottom=2.5cm, top=2.5cm]{geometry}
-\setlength{\columnsep}{0.5cmcm}
+\setlength{\columnsep}{0.5cm}
 \usepackage{fancyhdr}
 \usepackage{lmodern}
 \usepackage{microtype}
@@ -106,6 +106,7 @@
 
 \newcommand{\bmath}[0]{\mathcal{B}}
 \newcommand{\cmath}[0]{\mathcal{C}}
+\newcommand{\R}[0]{\mathbb{R}}
 \newtheorem{savoir}{Truc}
 \newenvironment{truc}{
     \begin{mdframed}[backgroundcolor=orange!7,
@@ -115,8 +116,8 @@
 
 % Définir un environnement mdframed spécifique pour les remarques
 \newenvironment{framedremark}
-  {\begin{mdframed}[backgroundcolor=orange!7, linecolor=orange!20, linewidth=1pt]\begin{remark}}
-  {\end{remark}\end{mdframed}}
+  {\begin{mdframed}[backgroundcolor=orange!7, linecolor=orange!20, linewidth=1pt]}
+  {\end{mdframed}}
 
 
 \newtheorem{resume1}{Résumé}
@@ -676,6 +677,7 @@ linewidth=1pt]\begin{pro}}
     \setlength{\parskip}{\unchangedparskip}
     \directlua{insubparag = false}
 }
+a
 
 % ##### 05. Lecture headers #####
 % This provides:
