--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,9 @@
 \usepackage[left=2.75cm,right=2.75cm,top=2cm,bottom=3cm]{geometry}
 \usepackage{style}
 \thispagestyle{fancy}
-\title{Algèbre linéaire I}
+\title{Analyse II}
 \author{Arthur Herbette \\
-Prof. Jérome Scherer}
+Prof. Lachowska Anna}
 
 \begin{document}
 \setcounter{section}{8}
@@ -15,87 +15,6 @@ Prof. Jérome Scherer}
 \chapter{Introduction}
 Le but de se document est d'y faire un résumé qui se trouve entre les notes de Joachim Favre et Les résumé des théorèmes disponible sur moodle. Je vais essayer de me tenir a environ une à $2$ pages par cours
 
-\chapter{Equations différentielles ordinaires}
-\lecture{1}{2025-02-17}{Equa Diff}{}
-\section{definition} 
-\begin{definition}
-    \important{Une équation différentielle ordinaire} est une expression \[E(x, y, y', \dots, y^{(n)}) = 0 \]
-    où $E$ est une expression fonctionnelle, $n \in \mathbb{N}_0$, et $y = y (x)$ est une fonction inconnue de $x$ \\
-    On cherche un intervalle ouvert $I \subset \mathbb{R}$ et une fonction $y : I \to \mathbb{R}$ de classe $C^n$ telle que l'équation donnée est satisfaite $\forall x \in I$.
-\end{definition}
-\begin{parag}{Equation à variable séparées} 
- Une équation à variables séparées est une équation du type $f(y)\cdot y' = g(x)$ est une \important{EDVS} où : 
- \begin{itemize}
-     \item $f: I \to \mathbb{R}$ est une fonction continue sur $I \subset \mathbb{R}$
-     \item $g: J \to \mathbb{R}$ est une fonction continue sur $J \subset \mathbb{R}$
- \end{itemize}
- Une fonction $y: J' \subset J \to \mathbb{R}$ de classe $C'$ satisfaisant l'équation $f(y)\cdot y' = g(x)$ est une solution
- \begin{subparag}{Remarque personnelle}
-     \begin{framedremark}
-         Ce type d'équation se résoudre très rapidement car on peut transformer le $y'$ en $\frac{dy}{dx}$ et "mettre le $dx$ de l'autre côté" : 
-         \[f(y)\cdot\frac{dy}{dx} = g(x) \implies \int f(y)dy = \int g(x) dx\] 
-         Et il suffit donc t'intégrer les deux côtés et le tour est joué.
-     \end{framedremark}
- \end{subparag}
-\end{parag}
-
-\begin{parag}{Terminologie}
-    Soit $E(x, y, \dots, y^{(n)}) = 0$ \textcolor{red}{(*)} une équation différentielle (ED):
-    \begin{itemize}
-        \item \textbf{Def:} un nombre naturel $n \in \mathbb{N}_+$ est \important{l'ordre} de l'équation $(*)$ si $n$ est l'ordre maximal de dérivée de $y(x)$ dans l'équation.
-        \item \textbf{Def:} Si (*) est de la forme $\alpha_0(x)y + \alpha_1(x)y' + \alpha_2(x)y'' + \cdots + \alpha_n(x)y^{(n)} = b(x)$ alors l'équation est dire \important{linéaire} où $\alpha_i(x)$, $b(x)$ dont des fonctions continues
-        \item \textbf{Def} Si l'expression (*) ne contient pas de $x$ l'équation (*) est dire \important{autonome}
-    \end{itemize}
-\end{parag}
-\begin{parag}{Problème de Cauchy}
-    \begin{definition}
-        Résoude \important{Le problème de Vauchy (ED avec des conditions initiales)} pour l'équation $E(x, y, y', \dots, y^{(n)}) = 0$ c'est de trouver l'intervalle ouvert $I \subset \mathbb{R}$ et une fonction $y : I \to \mathbb{R}$ de classe $C^n (I)$, telle que $E(x, y, \dots, y^{(n)}) = 0$ sur $I$ et $y(x_0) = b_0$, $y_(x) = B, \dots, y'(x_2) = \dots$
-    \end{definition}
-    Le nombre des conditions initiales depend du type de l'ED
-    \begin{framedremark}
-        C'est ce qui se passe en physique lorsqu'on a une forme et que l'on chercher la position au court du temps:
-        \begin{align*}
-            ma &= F\\
-            a &= \frac{F}{m}\\
-            \frac{d^2x}{dt^2} &= \frac{F}{m}\\
-            x = \frac{1}{2}\frac{F}{m}t^2 + c_1 t + c_0
-        \end{align*}
-        Et le but est de trouver ses constantes qui sont les conditions initiales.
-    \end{framedremark}
-    \begin{definition}
-        Une solution d'un problème de Cauchy est \important{maximale} si elle est définie sur le plus grand intervalle possible.
-    \end{definition}
-\end{parag}
-\section{Existence et unicit d'une solution de EDVS}
-\begin{parag}{Théorème}
-    \begin{theoreme}
-        Soit \begin{itemize}
-            \item $f: I \to \mathbb{R}$ une fonction continue telle que $f(y) \neq 0\;\; \forall y \in I$
-            \item $g : J \to \mathbb{R}$ une fonction continue. Alors pour tout couple $(x_0 \in J, b_0 \in I)$, l'équation $f(y)\cdot y' = g(x) (**)$ admet une solution $y : J' \subset J \to I$ vérifiant la condition initiale $y(x_0) = b_0$
-        \end{itemize}
-        Si $y_1 : J_1 \to I$ et $y_2 : J_2 \to I$ sont deux solutions telles que $y_1(x_0) = y_2(x_0) = b_0$, alors $y_1(x) = y_2(x)$ pour tout $x \in J_1 \cap J_2$
-        \\
-        (Demonstration la prochaine fois
-        
-    \end{theoreme}
-\end{parag}
-\chapter{Méthode de démonstration, Raisonnement mathématique}
-\begin{parag}{Introduction}
-    \begin{definition}
-        Une \important{proposition} est un énoncé qui peut être vrai ou faux.
-    \end{definition}
-    \begin{definition}
-        Une \important{démonstration} est une suite d'implication logique qui sert à dériver la proposition en question à partir des axiomes (propositions admises comme vraies) et des propositions préalablement obtenue
-    \end{definition}
-\end{parag}
-\section{Méthode de démonstration}
-\begin{parag}{Méthode 1}
-    Démonstration direct:\\ $\underbrace{P}_{\text{condition donnée}}$ $\implies$ implications logiques/axiomes/propositions connues $\implies \underbrace{Q}_{\text{proposition désirée}}$
-    \begin{subparag}{Remarque personnelle}
-        C'est pas vraiment très claire comme ça mais en gros ça veut juste dire que pour prouver quelque chose on y va en mode brute force (tout les nombres entiers sont des nombres réels (propositions connues) et par exemple est ce que $23$ est un réel?) 
-    \end{subparag}
-\end{parag}
-\begin{parag}{Raisonnement par contraposée}
-    Comme vu en AICC on sait que $P \implies Q \equiv \neg P \implies \neg Q$
-\end{parag}
+\input{lecture1}
+\input{lecture2}
 \end{document}
