Note des slides sans le cours

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,9 @@ Prof. Lachowska Anna}
 \maketitle
 
 \chapter{Introduction}
-Le but de se document est d'y faire un résumé qui se trouve entre les notes de Joachim Favre et Les résumé des théorèmes disponible sur moodle. Je vais essayer de me tenir a environ une à $2$ pages par cours
+Le but de se document est d'y faire un résumé qui se trouve entre les notes de Joachim Favre (Dont j'ai utilisé le template) et Les résumé des théorèmes disponible sur moodle. Je vais essayer de me tenir a environ une à $2$ pages par cours
 
 \input{lecture1}
 \input{lecture2}
+\input{lecture3}
 \end{document}
