--- a/main.tex
+++ b/main.tex
@@ -18,4 +18,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture1}
 \input{lecture2}
 \input{lecture3}
+\input{lecture4}
 \end{document}
