--- a/main.tex
+++ b/main.tex
@@ -19,4 +19,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture2}
 \input{lecture3}
 \input{lecture4}
+\input{lecture5}
+
 \end{document}
