--- a/lecture5.tex
+++ b/lecture5.tex
@@ -328,23 +328,9 @@ Nous allons le prouver par contraposée:
        \begin{align*}
            v(x) = C_1x + C_2 \ln x + \frac{1}{2}x^2 \ln x - x^2
        \end{align*}
-       où $C_1, C_2 \in \mathbb{R}, x \in ] e, \infty[
+       où $C_1, C_2 \in \mathbb{R}, x \in ] e, \infty[$
        
        
    \end{subparag}
 
 \end{parag}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
