--- a/main.tex
+++ b/main.tex
@@ -20,5 +20,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture3}
 \input{lecture4}
 \input{lecture5}
-
+\input{lecture6}
 \end{document}
