--- a/lecture4.tex
+++ b/lecture4.tex
@@ -79,15 +79,15 @@
         Soient $a, b \in \mathbb{C}$ les racines de l'équation $ \lambda^2 + p \lambda + q = 0$
     \\
     Alors la solution générale est : 
+
     \begin{align*}
-        y(x) = \begin{cases}
-                C_1 e^{ax} + C_2 e^{bx} \text{ , si } a \neq b, a, b \in \mathbb{R} \; \; \forall C_1, C_2, \in \mathbb{R} \\
-                C_1e^{ax} + C_2xe^{bx} \text{ , si } a = b \\
-                C_1e^{ \alpha x} \cos \beta x + C_2 e^{ \alpha x} \sin \beta x \text{ , si } a = \alpha + i \beta = \hat{b} \notin \mathbb{R} \; \; \forall x \in \mathbb{R}
-                            
+       y(x) = \begin{cases}
+              C_1 e^{ax} + C_2 e^{bx} \text{ , si } a \neq b, a, b \in \mathbb{R} \; \; \forall C_1, C_2, \in \mathbb{R} \\
+             C_1e^{ax} + C_2xe^{bx} \text{ , si } a = b \\
+                C_1e^{\alpha x} \cos \beta x + C_2 e^{ \alpha x} \sin \beta x \text{ , si } a = \alpha + i \beta = \hat{b} \notin \mathbb{R} \; \; \forall x \in \mathbb{R}
         \end{cases}
     \end{align*}
-    
+   oui 
     \begin{subparag}{Exemple 2}
        \begin{align*}
            y'' + 9y = 0
