--- a/main.tex
+++ b/main.tex
@@ -21,4 +21,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture4}
 \input{lecture5}
 \input{lecture6}
+\input{lecture7}
 \end{document}
