--- a/main.tex
+++ b/main.tex
@@ -22,4 +22,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture5}
 \input{lecture6}
 \input{lecture7}
+\input{lecture8}
 \end{document}
