--- a/style.sty
+++ b/style.sty
@@ -77,6 +77,14 @@
 \usetikzlibrary{math,arrows,positioning,shapes,fit,calc}
 
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks = true,
+    linkcolor=blue,
+    filecolor=magenta,
+    urlcolor=cyan,
+    pdftitle={AICC II}
+    pdfpagemode=FullScreen,
+}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
