--- a/lecture8.tex
+++ b/lecture8.tex
@@ -1,6 +1,6 @@
 \lecture{8}{2025-02-12}{Suite d'élément de $\mathbb{R}^n$}{}
 
-\begin{parag}{Rappel: Sous-ensembles ouvert et fermmés dans $ \mathbb{R}^n $}
+\begin{parag}{Rappel: Sous-ensembles ouvert et fermé dans $ \mathbb{R}^n $}
     \begin{definition}
       Soit $E$ un ensemble tel que $E \subset \mathbb{R}^n $ Alors:
       \begin{align*}
