--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,11 @@ Prof. Lachowska Anna}
 \setcounter{section}{8}
 \maketitle
 
+\thispagestyle{empty}
+\tableofcontents
+\thispagestyle{empty}
+\listoflectures
+
 \chapter{Introduction}
 Le but de se document est d'y faire un résumé qui se trouve entre les notes de Joachim Favre (Dont j'ai utilisé le template) et Les résumé des théorèmes disponible sur moodle. Je vais essayer de me tenir a environ une à $2$ pages par cours
 
@@ -23,4 +28,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture6}
 \input{lecture7}
 \input{lecture8}
+\input{lecture9}
 \end{document}
