--- a/style.sty
+++ b/style.sty
@@ -78,11 +78,7 @@
 
 \usepackage{hyperref}
 \hypersetup{
-    colorlinks = true,
-    linkcolor=blue,
-    filecolor=magenta,
-    urlcolor=cyan,
-    pdftitle={AICC II}
+    pdftitle={Analyse II}
     pdfpagemode=FullScreen,
 }
 \usepackage{algorithm}
