--- a/main.tex
+++ b/main.tex
@@ -29,4 +29,5 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture7}
 \input{lecture8}
 \input{lecture9}
+\input{lecture10}
 \end{document}
