--- a/main.tex
+++ b/main.tex
@@ -30,4 +30,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture8}
 \input{lecture9}
 \input{lecture10}
+\input{lecture11}
+
 \end{document}
