--- a/lecture11.tex
+++ b/lecture11.tex
@@ -14,13 +14,13 @@ Supposons que
         Alors $P(n)$ est vraie pour tout $n \geq n_0$
     \end{subparag}
 On regroupe quatre étapes pour une preuve par récurrence:
-\begin{ennumerate}
+\begin{enumerate}
 \item La proposition ( Soit $P(n)$ la proposition pour $x$)
 \item L'initialisation $P(0)$
 \item L'hérédité: Supposons que $P(n)$ est vrai, alors il faut en déduire $P(n+1)$
 \item Conclusion: Puisque $P(x_0)$ est vraie et que pour tout $x \geq x_0$, $P(n) \implies P(n+1)$, par récurrence $P(n)$ est vraie $ \forall n \geq x_0$. 
     
-\end{ennumerate}
+\end{enumerate}
 \begin{framedremark}
     Attention a ne pas mélanger ce qu'on veut et ce qu'on a.
 \end{framedremark}
