--- a/main.tex
+++ b/main.tex
@@ -31,5 +31,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture9}
 \input{lecture10}
 \input{lecture11}
+\input{lecture12}
 
 \end{document}
