--- a/main.tex
+++ b/main.tex
@@ -32,5 +32,7 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture10}
 \input{lecture11}
 \input{lecture12}
+\input{lecture13}
 
+\input{lecture17}
 \end{document}
