--- a/main.tex
+++ b/main.tex
@@ -35,4 +35,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture13}
 
 \input{lecture17}
+\input{lecture18}
+
 \end{document}
