lecture20 + debut de l'exa blanc

--- a/lecture17.tex
+++ b/lecture17.tex
@@ -106,18 +106,18 @@ alors:
     \begin{definition}
         Soit $f: E \to R $ de classe $C^2$ sur $E$. La fonction $ \delta f: E \to \mathbb{R}$:
         \begin{align*}
-            \delta f(x_1, \dots, x_n) = \frac{\partial^2 f}{\partial x_1^2} + \frac{\partial^2 f}{\partial x_2^2} + \cdots  + \frac{\partial^2 f}{\partial x_n^2}
+            \Delta f(x_1, \dots, x_n) = \frac{\partial^2 f}{\partial x_1^2} + \frac{\partial^2 f}{\partial x_2^2} + \cdots  + \frac{\partial^2 f}{\partial x_n^2}
         \end{align*}
         Est le laplacien de $f$.
     \end{definition}
 \end{parag}
 \begin{parag}{Harmonique}
     \begin{definition}
-    Une fonction telle que $ \delta f = 0$ sur $E \subset \mathbb{R}^2$ s'appelle \important{harmonique}
+    Une fonction telle que $ \Delta f = 0$ sur $E \subset \mathbb{R}^2$ s'appelle \important{harmonique}
     \end{definition}
     
     Une fonction harmonique sur un domaine compact atteint son min et son max \important{sur la frontière} du domaine (Sans démonstration).\\
-    On peut prendre par exemple la fonction $f(x, y) = x^2 - y^2$ qui si l'on calcule $ \delta f(x, y) = 2 -2 = 0$ Et l'on voit sur un graphe que si l'on prends une ensemble compact ses max, min se trouvent toujours sur la frontière, ce qui n'est pas le cas par exemple pour $f(x, y) = x^2 + y^2$.
+    On peut prendre par exemple la fonction $f(x, y) = x^2 - y^2$ qui si l'on calcule $ \Delta f(x, y) = 2 -2 = 0$ Et l'on voit sur un graphe que si l'on prends une ensemble compact ses max, min se trouvent toujours sur la frontière, ce qui n'est pas le cas par exemple pour $f(x, y) = x^2 + y^2$.
 \end{parag}
 
 
