--- a/main.tex
+++ b/main.tex
@@ -36,5 +36,7 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 
 \input{lecture17}
 \input{lecture18}
+\input{lecture19}
+\input{lecture20}
 
 \end{document}
