--- a/lecture2.tex
+++ b/lecture2.tex
@@ -103,6 +103,8 @@
     où $C \in \R$, $x \in I$ est la solution générale de l'équation homogène associée $y' + py = 0$ sur $I$
 \end{parag}
 \subsection{Principe de superposition de solutions}
+\label{subsec:variationconstante}
+
 \begin{parag}{Principe}
     Soit $I \subset \R$ ouvert, $p, f_1, f_2 : I \to \R$ fonctions continues
     \\
