c'est casse je sias meme pas pourquoi

--- a/lecture18.tex
+++ b/lecture18.tex
@@ -193,7 +193,8 @@
     Le  but est de trouver les points critique et de déterminer leur nature.\\
     Soit $f\left(x, y\right) = y^3 + 3y^2 - 4xy + x^2$. Alors $f \in C^{\infty}\left(\mathbb{R}^2\right)$ donc tout les points critiques trouvés sont stationnaire.\\
     On calcule
-    \begin{equation*} \nablaf\left(x, y\right) = \left(-4y + 2x, 3y^2 + 6y - 4x\right) \end{equation*}
+    \begin{equation*}  
+ \nabla   f\left(x, y\right) = \left(-4y + 2x, 3y^2 + 6y - 4x\right) \end{equation*}
     Et Pour la Hessienne:
     \begin{equation*} \text{Hess} f\left(x, y\right) = \begin{pmatrix} 2 & -4 \\ -4 & 6y + 6 \end{pmatrix} \end{equation*}
     \begin{equation*} \nabla f\left(x, y\right) = 0 \iff \begin{cases} 2x = 4y \\ 3y^2 + 6y = 4x \end{cases} \iff \begin{cases} x = 2y \\ y\left(3y - 2\right) = 0\end{cases} \end{equation*} 
