--- a/lecture19.tex
+++ b/lecture19.tex
@@ -176,7 +176,7 @@ Donc la fonction est dérivable.
     Ce qui après des simplifications:
     \begin{align*}\lim_{h \to 0} \frac{\sin\left(\pi + \frac{-3h^2}{5} + \frac{2h^3}{5\sqrt{5}}\right)}{h}  \end{align*}
     qui nous donne avec les identités trigonométrique:
-    \begin{align*} \lim_{t \to 0} \frac{\cos \pi \sin\left(-\frac{3}{h^2} + \frac{2h^3}{5\sqrt{5}}}{h} = 0 \end{align*}
+    \begin{align*} \lim_{t \to 0} \frac{\cos \pi \sin\left(-\frac{3}{h^2} + \frac{2h^3}{5\sqrt{5}}= 0 \end{align*}
 On sait que c'est $0$ parce qu'il y a une puissance $3$ dans le sinus qui va dépasser la puissance $1$ qui est en bas.
 \end{parag}
 \begin{parag}{Question 8}
