lecture21 je sais pas si cest fini

--- a/lecture19.tex
+++ b/lecture19.tex
@@ -187,10 +187,13 @@ On sait que c'est $0$ parce qu'il y a une puissance $3$ dans le sinus qui va dé
     Ce qui donne lorsqu'on met en matrice et qu'on évalue en $\left(1, 1\right)$:
     \begin{align*} J_{\overline{f}\left(1, 1\right)} = \begin{pmatrix} 1 & 1 \\ 2 & 2 \end{pmatrix}  \end{align*}
     Et comme on demande directement le gradient de la fonction composée de matrice qui font $1 \times 2 $ avec $2 \times 2$ on a juste besoin de faire le produit matriciel de nos deux jacobienne:
-    \begin{align*} \nabla h\left(1, 1\right) = \begin{pmatrix} 1 & -\frac{1}{4} \end{pmatrix} \times\begin{pmatrix} 1 & 1 \\ 2 & 2 \end{pmatrix} = \begin{pmatrix} \frac{1}{2} & \frac{1}{2} \end{pmatrix}  \end{align*}
+    \begin{align*} 
+        \nabla h\left(1, 1\right) = \begin{pmatrix} 1 & -\frac{1}{4} \end{pmatrix} \times\begin{pmatrix} 1 & 1 \\ 2 & 2 \end{pmatrix} = \begin{pmatrix} \frac{1}{2} & \frac{1}{2} \end{pmatrix}  
+    \end{align*}
     Je note juste ici qu'on a pas eu besoin de faire d'autre calcul car aussi $f\left(1, 1\right) = \left(1, 2\right)$ qui était exactement le point du gradient de $f\left(x, y\right)$.
 \end{parag}
 
 
+\end{parag}
 
 
