--- a/main.tex
+++ b/main.tex
@@ -38,5 +38,7 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture18}
 \input{lecture19}
 \input{lecture20}
+\input{lecture21}
+
 
 \end{document}
