--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture19}
 \input{lecture20}
 \input{lecture21}
-
+\input{lecture22}
 
 \end{document}
