--- a/lecture22.tex
+++ b/lecture22.tex
@@ -71,27 +71,27 @@ Les idées majeurs sont TFI, qui permet de mieux réecrire notre fonction, par l
     Alors, par le théorème de Lagrange, si on a $\left(x, y, z\right) \in $ sphère qui est un point d'extremum local de $f$ sur la sphère, alors, $\exists \lambda \in \mathbb{R}$ tel que:
     \begin{align*} 
         \nabla f\left(x, y, z\right) = \lambda \nabla g\left(x, y, z\right)\\
-        x^2 + y^2 + z'2 =  21
+        x^2 + y^2 + z^2 =  21
     \end{align*}
-    On a donc ici quatre équation dont les trois du gradients:
+    On a donc ici quatre équations dont les trois du gradients:
     \begin{align*}
-        \begin{case}
+        \begin{cases}
             \left(4, 2, -1\right) =  \lambda \left(2x, 2y, 2z\right)\\
             x^2 + y^2 + z^2 =  21
-        \end{case}
+        \end{cases}
     \end{align*}
     Donc si on pose notre première trois relations:
     \begin{align*}
-        \begin{case}
+        \begin{cases}
             4 =  \lambda 2x\\
             2 =  \lambda 2y \\
             -1 =  \lambda 2z
-            \end{case} \implies \begin{case}
+            \end{cases} \implies \begin{cases}
             x =  \frac{2}{\lambda}\\
             y =  \frac{1}{\lambda}\\
             z =  - \frac{1}{2\lambda}
-        \end{case}
-        \implies \begin{case} x =  -4z \\ y =  -2z \end{case}
+        \end{cases}
+        \implies \begin{cases} x =  -4z \\ y =  -2z \end{cases}
     \end{align*}
     Et cela dans $g\left(x, y, z\right) =  0$.\\
     On implique ce qu'on trouve à notre contrainte:
@@ -123,29 +123,29 @@ Les idées majeurs sont TFI, qui permet de mieux réecrire notre fonction, par l
     \begin{align*} \nabla g_2\left(x, y, z\right) =  k \nabla g_1\left(x, y, z\right) \implies \left(y + z, x + z, x + y\right) = \left(k, k, k\right) \implies x =  y = z \end{align*}
     Et donc si on remplace ce que l'on vient de trouver dans notre fonction $g$:
     \begin{align*} 
-        \begin{case}
+        \begin{cases}
             g_1\left(x, x, x\right) =  3x - 5 = 0 \implies x =  \frac{5}{3}\\
             g_2\left(x, x, x\right) =  3x^2 - 8 = 0 \implies 3\left(\frac{5}{3}\right)^2 =  \frac{25}{3} \neq 8
-        \end{case}
+        \end{cases}
     \end{align*}
     Ce qui implique donc que $\nabla g_1\left(x, y, z\right)$ et $\nabla g_2\left(x, y, z\right)$ sont linéairement indépendants ce qui implique que le théorème de Lagrange est applicable.\\
     Et donc obtient donc les équations:
 \begin{align*}
-    \begin{case}
+    \begin{cases}
         \nabla f\left(x, y, z\right) =  \left(yz, xz, xy\right) =  \lambda_1\left(1, 1, 1\right) + \lambda_2 \left(y + z, x + z, x + y\right)\\
         g_1\left(x, y, z\right) =  x + y + z - 5 =  0\\
         g_2\left(x, y, z\right) =  xy + yz + xz - 8 = 0
-    \end{case}
+    \end{cases}
 \end{align*}
 Ce qui nous donne:
 \begin{align*} 
-    \begin{case}
+    \begin{cases}
         yz =  \lambda_1 + \lambda_2 \left(y + z\right)\\
         xz =  \lambda_1 + \lambda_2\left(x + z\right)\\
         xy =  \lambda_1 + \lambda_2\left(x + y\right)\\
         x + y + z = 5\\
         xy + yz + xz =  8
-    \end{case}
+    \end{cases}
 \end{align*}
 Donc on voit ici que ça a l'air embêtant à faire donc on va se poser quelque minute pour voir s'il y a quelque chose afin d'accélérer tout ça.\\
 Si on additionne nos deux première relations: 
@@ -159,19 +159,19 @@ Et finalement pour $\left(1\right) + \left(3\right)$:
 \begin{align*} y\left(5-y\right) = 2\lambda_1 + \lambda_2\left(5 + y\right) \end{align*}
 Ce qui revient donc:
 \begin{align*} 
-    \begin{case}
+    \begin{cases}
         z^2 + \left(\lambda_2 - 5\right)z + 5\lambda_2 + 2\lambda_1 =  0\\
         x^2 + \left(\lambda_2 - 5\right)x + 5\lambda_2 + 2\lambda_1 = 0\\
         y^2 + \left(\lambda_2 - 5\right) y + 5\lambda_2 + 2\lambda_1 = 0
-    \end{case}
+    \end{cases}
 \end{align*}
 Vu qu'on a trois fois la même équations; soit $x= y= z$ qui ne satisfait pas les contraintes, soit une variable différente des $2$ autres, par exemple $x =  y, z \neq x$.\\
 On peut maintenant utiliser les équations (4) et (5):
 \begin{align*} 
-    \begin{case}
+    \begin{cases}
         2x + z =  5\\
         x^2 + 2xz =  8
-        \end{case} \implies \begin{case} z = 5 - 2x\\ x^2 + 2x\left(5-2x\right) - 8 =  0 \implies 3x^2 + 10x - 8 = 0\end{case}
+        \end{cases} \implies \begin{cases} z = 5 - 2x\\ x^2 + 2x\left(5-2x\right) - 8 =  0 \implies 3x^2 + 10x - 8 = 0\end{cases}
 \end{align*}
 Donc on peut résoudre notre équation tel que:
 
@@ -209,11 +209,11 @@ Puisque les $g_1\left(x, y, z\right) =  0$, $g_2\left(x, y, z\right)$ est compac
     \begin{align*} P \implies Q \end{align*}
     On le fait par cas:
     \begin{align*} 
-        P = \begin{case}
+        P = \begin{cases}
             \text{cas 1} \implies Q\\
             \vdots\\
             \text{ cas n} \implies Q
-        \end{case}
+        \end{cases}
     \end{align*}
 \end{parag}
 
@@ -284,9 +284,9 @@ Puisque les $g_1\left(x, y, z\right) =  0$, $g_2\left(x, y, z\right)$ est compac
     \begin{subparag}{Proposition 1}
         Pour cette méthode on va plutôt utilise la disjonction des cas comme la plupart des propositions avec la divisibilité
     \end{subparag}
-    \begin{parag}{Question 2}
+    \begin{subparag}{Question 2}
         Ici on utilise Les tiroirs car un a un nombre ``minimale'' qui peut facilement se compter.
-    \end{parag}
+    \end{subparag}
     
     \begin{subparag}{Proposition 3}
         On utilise l'absurde avec le Euclide\\
@@ -296,7 +296,7 @@ Puisque les $g_1\left(x, y, z\right) =  0$, $g_2\left(x, y, z\right)$ est compac
     \begin{subparag}{Proposition 4}
         Donc ici on fait par l'absurde tel que ``imaginons que cela existe'' on voit que cela est une contradiction, donc cela ne peut pas exister.
     \end{subparag}
-    \begin{subparag}{Proposition 5}
+   \begin{subparag}{Proposition 5}
         
     \end{subparag}
     \begin{subparag}{Proposition 6}
