--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@ Prof. Lachowska Anna}
 \listoflectures
 
 \chapter{Introduction}
-Le but de se document est d'y faire un résumé qui se trouve entre les notes de Joachim Favre (Dont j'ai utilisé le template) et Les résumé des théorèmes disponible sur moodle. Je vais essayer de me tenir a environ une à $2$ pages par cours
+Ce document a été écrit en utilisant Latex et vim.:w
 
 \input{lecture1}
 \input{lecture2}
@@ -40,5 +40,6 @@ Le but de se document est d'y faire un résumé qui se trouve entre les notes de
 \input{lecture20}
 \input{lecture21}
 \input{lecture22}
+\input{lecture23}
 
 \end{document}
